# My_AlphaSignalAI

./: README.md  construction_news.docx  deep_research_report.docx  main.py  planner_crew.py  researcher_crew.py
.github/workflows/: pr_agent.yml
.workflows/github/: pr_agent.yml
Article_Generator/: README.md  pyproject.toml
Article_Generator/news/: 2025_ai_tech_trends_news_article.md
Article_Generator/src/my_alpha_signal/: crew.py  main.py
Article_Generator/src/my_alpha_signal/config/: agents.yaml  tasks.yaml
