[project]
name = "my_alpha_signal"
version = "0.1.0"
description = "my-alpha-signal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
my_alpha_signal = "my_alpha_signal.main:run"
run_crew = "my_alpha_signal.main:run"
train = "my_alpha_signal.main:train"
replay = "my_alpha_signal.main:replay"
test = "my_alpha_signal.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
